# skiller

./: .gitignore  LICENSE  README.md  dev.py  pyproject.toml  start.ps1  start.sh
content/: linux_basics.yaml  linux_freeform.yaml  python_freeform.yaml  python_mcq.yaml  typing_linux.yaml  typing_numpy.yaml  typing_pandas.yaml  typing_snippets.yaml
content/python_tasks/01_practice/: prompt.md  solution.py  task.yaml  test_visible.py
content/python_tasks/01_practice/content/python_tasks/01_practice/: .report.json
content/python_tasks/02_easy/: prompt.md  solution.py  task.yaml  test_hidden.py  test_visible.py
content/python_tasks/03_hard/: prompt.md  solution.py  task.yaml  test_hidden.py  test_visible.py
content/python_tasks/04_csv_aggregate/: prompt.md  solution.py  task.yaml  test_hidden.py  test_visible.py
src/skiller/: _probe.py  _test_driver.py  achievements.py  content.py  hot_reload.py  main.py  models.py  store.py  test_runner.py  ui.py
src/skiller/screens/: achievements.py  mcq.py  menu.py  stats.py  task.py  typing.py
