[project]
name = "skiller"
version = "0.1.0"
description = "TUI for DevSkiller-style technical exercise prep"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85",
    "rich>=13.7",
    "pyyaml>=6.0",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[project.scripts]
skiller = "skiller.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skiller"]

[tool.ruff]
line-length = 100
target-version = "py311"
